6877254: Server vm crashes with no branches off of store slice" when run with CMS and UseSuperWord(default)

Design StoreCMNode::Ideal to promote its oopStore input if the input is a MergeMem node

Reviewed-by: kvn, never